--- a/index.html
+++ b/index.html
@@ -4,31 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Thursday 01:50, scattered clouds<br />
-          Humidity: 73%, Wind: 7.6km/h
-        </p>
-      </div>
-      <div>🌥 16°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/Jojo-star7">Joan.W </a>and is
-      <a href="https://github.com/Jojo-star7/Weather-App"
-        >open-sourced on GitHub</a
-      >
-      and <a href="https://jo-weather.netlify.app/">hosted on Netlify</a>
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Thursday 01:50, scattered clouds<br />
+            Humidity: 73%, Wind: 7.6km/h
+          </p>
+        </div>
+        <div>🌥 16°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/Jojo-star7">Joan.W </a>and is
+        <a href="https://github.com/Jojo-star7/Weather-App"
+          >open-sourced on GitHub</a
+        >
+        and <a href="https://jo-weather.netlify.app/">hosted on Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
