--- a/index.html
+++ b/index.html
@@ -15,20 +15,31 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Thursday 01:50, scattered clouds<br />
-            Humidity: 73%, Wind: 7.6km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Thursday 01:50, scattered clouds<br />
+              Humidity: <strong>73%</strong>, Wind: <strong>7.6km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌥</div>
+            <div class="weather-app-temperature">18</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>🌥 16°C</div>
       </main>
       <footer>
         This project was coded by
