--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Thursday 01:50, scattered clouds<br />
               Humidity: <strong>73%</strong>, Wind: <strong>7.6km/h</strong>
@@ -38,7 +38,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌥</div>
-            <div class="weather-app-temperature">18</div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
