--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
       </main>
       <footer>
         This project was coded by
-        <a href="https://github.com/Jojo-star7">Joan.W </a>and is
-        <a href="https://github.com/Jojo-star7/Weather-App"
+        <a href="https://github.com/Jojo-star7" target="_blank">Joan.W </a>and
+        is
+        <a href="https://github.com/Jojo-star7/Weather-App" target="_blank"
           >open-sourced on GitHub</a
         >
-        and <a href="https://jo-weather.netlify.app/">hosted on Netlify</a>
+        and
+        <a href="https://jo-weather.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
       </footer>
     </div>
     <script src="src/app.js"></script>
