--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Thursday 01:50, scattered clouds<br />
-              Humidity: <strong>73%</strong>, Wind: <strong>7.6km/h</strong>
+              <span id="time"></span>, <span id="description"></span><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
